--- a/app/src/main/res/layout/activity_collage_2_2.xml
+++ b/app/src/main/res/layout/activity_collage_2_2.xml
@@ -224,8 +224,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:background="@color/color_theme"
         >
-        <include
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/collageAdjustToolsRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_theme"
+            android:orientation="horizontal"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/idCollageEditToolsRecycleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_theme"
+            android:orientation="horizontal"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible"
+            />
+        <!--<include
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/dp10"
@@ -233,7 +260,7 @@
             android:paddingLeft="@dimen/dp1"
             android:paddingRight="@dimen/dp1"
             layout="@layout/collage_edittools_layout"
-            />
+            />-->
     </LinearLayout>
 
 
