--- a/app/src/main/res/layout/adjust_camera_layout.xml
+++ b/app/src/main/res/layout/adjust_camera_layout.xml
@@ -10,44 +10,112 @@
     >
 
     <LinearLayout
+        android:id="@+id/brightnessSeekBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="@dimen/dp2"
-        android:paddingTop="@dimen/dp2"
-        android:weightSum="100">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp23"
-            android:drawableLeft="@drawable/svg_brightness"
-            android:layout_weight="10"/>
-        <SeekBar
-            android:id="@+id/cameraBrightness"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp23"
-            android:layout_weight="90" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp30"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/dp2"
-        android:paddingTop="@dimen/dp2"
+        android:paddingBottom="@dimen/dp3"
+        android:paddingTop="@dimen/dp3"
+        android:layout_gravity="center"
         android:weightSum="100">
 
+        <TextView
+            android:id="@+id/adjustClose"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp35"
+            android:drawableEnd="@drawable/svg_close"
+            android:layout_weight="10"
+            />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp35"
+            android:layout_weight="80"
+            android:orientation="vertical">
+
+            <SeekBar
+                android:id="@+id/cameraBrightnessSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                />
+            <SeekBar
+                android:id="@+id/cameraContrastSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraSaturationSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraSharpnessSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraVignetteSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraShadowSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraHighlightSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraTempSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraTintSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraDenoiseSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraCurveSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/cameraColorBalanceSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+        </LinearLayout>
+
 
         <TextView
+            android:id="@+id/adjustDone"
             android:layout_width="0dp"
-            android:layout_height="@dimen/dp22"
-            android:drawableLeft="@drawable/svg_contrast"
-            android:layout_weight="10"/>
+            android:layout_height="@dimen/dp35"
+            android:drawableStart="@drawable/svg_done"
+            android:layout_weight="10"
+            />
 
-        <SeekBar
-            android:id="@+id/cameraContrast"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/dp22"
-            android:layout_weight="90" />
     </LinearLayout>
 
 </LinearLayout>
