--- a/app/src/main/res/layout/adjust_collage_layout.xml
+++ b/app/src/main/res/layout/adjust_collage_layout.xml
@@ -10,6 +10,115 @@
     >
 
     <LinearLayout
+        android:id="@+id/brightnessSeekBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/dp3"
+        android:paddingTop="@dimen/dp3"
+        android:layout_gravity="center"
+        android:weightSum="100">
+
+        <TextView
+            android:id="@+id/adjustClose"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp35"
+            android:drawableEnd="@drawable/svg_close"
+            android:layout_weight="10"
+            />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp35"
+            android:layout_weight="80"
+            android:orientation="vertical">
+
+            <SeekBar
+                android:id="@+id/collageBrightnessSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageContrastSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageSaturationSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageSharpnessSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageVignetteSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageShadowSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageHighlightSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageTempSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageTintSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageDenoiseSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageCurveSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+            <SeekBar
+                android:id="@+id/collageColorBalanceSeekBar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                />
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/adjustDone"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp35"
+            android:drawableStart="@drawable/svg_done"
+            android:layout_weight="10"
+            />
+
+    </LinearLayout>
+
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -47,6 +156,6 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/dp22"
             android:layout_weight="90" />
-    </LinearLayout>
+    </LinearLayout>-->
 
 </LinearLayout>
