--- a/app/src/main/res/layout/row_stickers_recycler.xml
+++ b/app/src/main/res/layout/row_stickers_recycler.xml
@@ -6,13 +6,11 @@
     android:id="@+id/stickerRecyclerItemLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/dp15"
     android:layout_marginTop="@dimen/dp2"
-    android:layout_marginRight="@dimen/dp15"
     android:layout_marginBottom="@dimen/dp2"
-    android:paddingLeft="2dp"
+    android:paddingLeft="@dimen/dp8"
     android:paddingTop="2dp"
-    android:paddingRight="2dp"
+    android:paddingRight="@dimen/dp8"
     android:paddingBottom="3dp"
     tools:background="@color/color_selected">
 
